# isshin

./: .env.sample  Cargo.toml
migrations/: 20231210020921_init.sql
src/: lib.rs  main.rs  user.rs
src/web/: auth.rs  mod.rs
