[package]
name = "isshin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = { version = "0.7.2", features = ["multipart"] }
axum-login = "0.10.2"
clap = { version = "4.4.11", features = ["derive"] }
directories = "5.0.1"
dotenv = "0.15.0"
password-auth = "1.0.0"
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["sqlite", "time", "runtime-tokio"] }
tokio = { version = "1.35.0", features = ["full"] }
tower = "0.4.13"
zxcvbn = "2.2.2"
